--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,16 @@
         android:theme="@style/Theme.Diklat22"
         tools:targetApi="31">
         <activity
+            android:name=".AsyncTaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".SecondActivity2"
             android:exported="false"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"
-                />
+                android:value=".MainActivity" />
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
